aati branch code

--- a/branch2/index.html
+++ b/branch2/index.html
@@ -18,6 +18,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="../fatima/index.html">F-branch</a>
               <a class="nav-link active" aria-current="page" href="./index.html">branch-2</a>
+              <a class="nav-link active" aria-current="page" href="../aati/index.html">branch-3</a>
             </div>
           </div>
         </div>
