--- a/fatima/index.html
+++ b/fatima/index.html
@@ -19,6 +19,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="./index.html">F-branch</a>
               <a class="nav-link active" aria-current="page" href="../branch2/index.html">branch-2</a>
+              <a class="nav-link active" aria-current="page" href="../aati/index.html">branch-3</a>
             </div>
           </div>
         </div>
