--- a/aati/index.html
+++ b/aati/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>main</title>
+    <title>aati</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">fisrt level</a>
+          <a class="navbar-brand" href="../index.html">main</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./fatima/index.html">F-branch</a>
-              <a class="nav-link active" aria-current="page" href="./branch2/index.html">branch-2</a>
-              <a class="nav-link active" aria-current="page" href="./aati/index.html">branch-3</a>
+              <a class="nav-link active" aria-current="page" href="../fatima/index.html">F-branch</a>
+              <a class="nav-link active" aria-current="page" href="../branch2/index.html">branch-2</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">branch-3</a>
             </div>
           </div>
         </div>
@@ -26,7 +26,7 @@
 
 
 
-<h1>Hello github root............👋</h1>
+<h2>hello world......aati................👀</h2>
 
 
 </body>
